--- a/erpnext/translations/az.csv
+++ b/erpnext/translations/az.csv
@@ -1523,3 +1523,110 @@ Quantity and Warehouse,Miqdar və Anbar,
 Shortcuts,Qısayollar,
 Copy to Clipboard,Buferə Kopyala,
 New,Yeni,
+Patient,Pasiyent,
+Male,Kişi,
+Female,Qadın,
+Healthcare,Səhiyyə,
+Patient Demographics,Pasiyent Demoqrafikası,
+Middle Name,Ata adı,
+Date of birth,Doğum tarixi,
+Report Preference,Hesabat Tercihi,
+Mobile,Mobil no.,
+Invite as User,İstifadəçi olaraq davət et,
+Patient Details,Pasiyent Təfərrüatları,
+Additional information regarding the patient,Pasiyent haqqında əlavə məlumat,
+Dashboard,İdarə paneli,
+Activity,Fəaliyyət,
+This is based on transactions against this Patient. See timeline below for details,Pasiyentin əməliyyatlarına əsaslanır. Təfərrüatlar üçün qrafikə baxın,
+Appointments and Encounters,Randevular və Qəbullar,
+Surgery,Cərrahiyyə,
+Rehab and Physiotherapy,Reabilitasiya və Fizioterapiya,
+Billing and Payments,Hesablama və Ödənişlər,
+Address & Contact,Adres & Kontakt,
+Medical History,Tibbi Tarixcə,
+Personal and Social History,Şəxsi və Sosial tarixcə,
+Occupation,Məşğulluq,
+Single,Subay,
+Married,Evli,
+Divorced,Boşanmış,
+Widow,Dul qadın,
+Allergies, Medical and Surgical History,"Allergiya, tibbi və cərrahi tarixcə",
+Allergies,Allergiya,
+Medical History,Tibbi tarixcə,
+Medication,Derman,
+Surgical History,Cərrahi tarixcə,
+Risk Factors,Risk faktorları,
+Tobacco Consumption (Past),Tütün istifadəsi (keçmişdə),
+Tobacco Consumption (Present),Tütün istifadəsi (indi),
+Alcohol Consumption (Past),Alkoqol istifadəsi (keçmişdə),
+Alcohol Consumption (Present),Alkoqol istifadəsi (indi),
+Occupational Hazards and Environmental Factors,Peşə Təhlükələri və Ətraf Mühit Faktorları,
+Other Risk Factors,Digər Risk Faktorları,
+Healthcare Practitioner,Tibb İşçisi,
+Basic Details,Əsas təfərrüatlar,
+Middle Name (optional),Ata adı,
+Middle Name (Optional),Ata adı,
+Phone (R),Telefon no.,
+Phone (Office),Telefon no. ofis,
+Employee and User Details,İşçi  və İstifadəçi məlumatları,
+Practitioner Type,İşçi növü,
+Internal,Daxili,
+External,Xarici,
+Medical Department,Tibbi Şöbəsi,
+Appointments,Randevular,
+Practitioner Schedules,İşçinin Cədvəlləri,
+Schedule,Cədvəl,
+Service Unit,Xidmət bölməsi,
+No Data,Məlumat yoxdur,
+Charges,Ödənişlər,
+Create a new ,Yeni əlavə et - ,
+Appointments and Patient Encounters,Randevular və Qəbullar,
+Practitioner Schedule,Tibb İşçilərin Cədvəli,
+Schedule Details,Cədvəl Təfərrüatları,
+Time Slots,Vaxt Slotları,
+Day,Gün,
+From Time,Saat-dan,
+To Time,Saat-da,
+Masters,Əsaslar,
+Consultation Setup,Konsultasiya Ayarları,
+Appointment Type,Randevu Növləri,
+Patient Appointments,Pasiyent Randevuları,
+Patient Appointment,Pasiyent Randevusu,
+Default Duration (In Minutes),Müddət (dəqiqə),
+Is Inpatient,Stasionardır,
+Billing,Faturalandırma,
+Appointment Type Service Items,Randevu Növü üçün Xidmətlər,
+Out Patient Consulting Charge Item,Ambulator konsultasiya Xidmətin adı,
+Out Patient Consulting Charge,Ambulator konsultasiya qitməti,
+Inpatient Visit Charge Item,Stasionar Xidmətin adı,
+Inpatient Visit Charge,Stasionar xidmətin qiyməti,
+Clinical Procedure Template,Kliniki Prosedur Şablonu,
+Consultations,Konsultasiyalar,
+Consultation,Konsultasiya,
+Clinical Procedure,Kliniki Prosedur,
+Is Billable,Ödənişlidir,
+Stock Consumption,Stok İstifadəsi,
+Allow Stock Consumption,Stok İstifadəsini aktiv et,
+Patient Name,Pasiyent Adı,
+Practitioner Name,Tibb İşçisinin Adı,
+Appointment Details,Randevu təfərrüatları,
+Time,Vaxt,
+Cash,Nağd,
+Invoiced,Faturalandı,
+More Info,əlavə Məlumat,
+New,Yeni,
+Appointment,Randevu,
+Procedure Template,Prosedur Şablonu,
+Consumables,Stok İstifadəsini,
+Patient Encounter,Pasiyent ilə Görüş,
+Records,Qeydlər,
+Encounter Date,Görüş Tarixi,
+Procedures,Prosedurlar,
+Clinical Procedures,Klinik Prosedurlar,
+Procedure Name,Prosedur Adı,
+Patient History,Pasiyent Tarixçəsi,
+Payments,Ödənişlər,
+Referring Practitioner,Tibb İşçisi,
+Material Receipt,Materialın qəbulu,
+Material Transfer,Material Transferi,
+Material Issue,Material çıxışı,
