--- a/erpnext/translations/az.csv
+++ b/erpnext/translations/az.csv
@@ -1550,7 +1550,7 @@ Single,Subay,
 Married,Evli,
 Divorced,Boşanmış,
 Widow,Dul qadın,
-Allergies, Medical and Surgical History,"Allergiya, tibbi və cərrahi tarixcə",
+"Allergies, Medical and Surgical History","Allergiya, tibbi və cərrahi tarixcə",
 Allergies,Allergiya,
 Medical History,Tibbi tarixcə,
 Medication,Derman,
